Adjust maximum text length to avoid overflow

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -62,7 +62,7 @@ h6 {
 }
 article > h3,h4,h5,h6{
 
-  width:490px;
+  width:480px;
   float:right;
   display:block;
   padding-top:15px;
@@ -86,7 +86,7 @@ article > header {
 
 
 article > p {
-  width: 490px;
+  width: 480px;
   float: right;
   background:white;
   padding-top:10px;
@@ -108,7 +108,7 @@ article > header > time {
 article > header > h2 {
   line-height:40px;
   font-size: 28px;
-  width: 490px;
+  width: 480px;
   font-weight:normal !important;
   font-family:Oswald, 'sans-serif';
   margin: 0;
@@ -134,7 +134,6 @@ article > footer {
   padding-left:10px;
   width:490px;
   float:right;
-  height:30px;
   background:white;
 
 }
